--- a/about.html
+++ b/about.html
@@ -1,37 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About – ARPIT RUGS</title>
   <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
 
-<header>
-  <h1>About ARPIT RUGS</h1>
-</header>
+  <header>
+    <h1>About ARPIT RUGS</h1>
+  </header>
 
-<nav>
-  <a href="index.html">Home</a>
-  <a href="collections.html">Collections</a>
-  <a href="about.html">About</a>
-  <a href="contact.html">Contact</a>
-  <a href="gallery.html">Gallery</a>
-</nav>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="collections.html">Collections</a>
+    <a href="about.html">About</a>
+    <a href="contact.html">Contact</a>
+    <a href="gallery.html">Gallery</a>
+  </nav>
+  <section class="hero">
+    <h2>Handcrafted • Elegant • Durable</h2>
+  </section>
 
-<section class="section">
-  <p><strong>Owner:</strong> Hari Shankar Yadav</p>
-  <p><strong>Location:</strong> Bhadohi, Uttar Pradesh</p>
-  <p>
-    ARPIT RUGS specializes in handmade rugs crafted using age-old weaving techniques
-    from the carpet capital of India — Bhadohi.
-  </p>
-</section>
+  <section class="section">
+    <p><strong>Owner:</strong> Hari Shankar Yadav</p>
+    <p><strong>Location:</strong> Bhadohi, Uttar Pradesh</p>
+    <p>
+      ARPIT RUGS specializes in handmade rugs crafted using age-old weaving techniques
+      from the carpet capital of India — Bhadohi.
+    </p>
+    <p><strong>Address:</strong> Building No./Flat No.: 183mi, Revda Parsapur, Bhadohi, Uttar Pradesh, PIN: 221401</p>
+    <p><strong>GSTIN:</strong> 09ABSPY3491G1ZQ</p>
 
-<footer>
-  © 2025 ARPIT RUGS – All Rights Reserved
-</footer>
+    <h2>Find Us Here</h2>
+    <p>Building No./Flat No.: 183mi, Revda Parsapur, Bhadohi, Uttar Pradesh, PIN: 221401</p>
+    <iframe
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3559.123456!2d82.560123!3d25.392345!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x398e1234567890ab%3A0x123456abcdef!2s183mi%2C%20Revda%20Parsapur%2C%20Bhadohi%2C%20Uttar%20Pradesh%20221401!5e0!3m2!1sen!2sin!4v1699999999999!5m2!1sen!2sin"
+      width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+      referrerpolicy="no-referrer-when-downgrade">
+    </iframe>
+  </section>
+
+
+  <footer>
+    © 2025 ARPIT RUGS – All Rights Reserved
+  </footer>
 
 </body>
+
 </html>
