--- a/gallery.html
+++ b/gallery.html
@@ -19,7 +19,9 @@
   <a href="about.html">About</a>
   <a href="contact.html">Contact</a>
 </nav>
-
+<section class="hero">
+    <h2>Handcrafted • Elegant • Durable</h2>
+  </section>
 <section class="section">
   <h2>Our Rugs in Detail</h2>
   <div class="gallery-grid">
@@ -52,6 +54,12 @@
     </div>
     <div class="gallery-item">
       <img src="images/10.jpeg" alt="Showcase Rug">
+    </div>
+    <div class="gallery-item">
+      <img src="images/rug.jpg" alt="Showcase Rug">
+    </div>
+    <div class="gallery-item">
+      <img src="images/DL-5053.webp" alt="Showcase Rug">
     </div>
     <!-- Add more images here -->
   </div>
